[gd_scene load_steps=32 format=2]

[ext_resource path="res://ATLAS/main-character-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://SCENES/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.00777, 12.3329 )

[sub_resource type="Animation" id=4]
resource_name = "air_down"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80 ]
}

[sub_resource type="Animation" id=5]
resource_name = "air_idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 77 ]
}

[sub_resource type="Animation" id=6]
resource_name = "air_up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 74, 75, 76 ]
}

[sub_resource type="Animation" id=7]
resource_name = "double_jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133 ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73 ]
}

[sub_resource type="Animation" id=10]
resource_name = "land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 89, 90 ]
}

[sub_resource type="Animation" id=11]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 240, 241, 242, 243, 244, 245, 246, 247, 248, 249 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "air_down"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "air_idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "air_up"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "land"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/air_down/node = SubResource( 13 )
states/air_down/position = Vector2( 952, 359 )
states/air_idle/node = SubResource( 14 )
states/air_idle/position = Vector2( 841, 207 )
states/air_up/node = SubResource( 15 )
states/air_up/position = Vector2( 962, 87 )
states/idle/node = SubResource( 16 )
states/idle/position = Vector2( 517, 110 )
states/jump/node = SubResource( 17 )
states/jump/position = Vector2( 755, 79 )
states/land/node = SubResource( 18 )
states/land/position = Vector2( 581, 244 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 227, 141 )
transitions = [ "idle", "run", SubResource( 20 ), "run", "idle", SubResource( 21 ), "idle", "jump", SubResource( 22 ), "jump", "air_up", SubResource( 23 ), "air_idle", "air_down", SubResource( 24 ), "air_idle", "air_up", SubResource( 25 ), "air_down", "air_idle", SubResource( 26 ), "air_up", "air_idle", SubResource( 27 ), "air_down", "land", SubResource( 28 ), "land", "idle", SubResource( 29 ), "idle", "air_idle", SubResource( 30 ) ]
start_node = "idle"
graph_offset = Vector2( 53, 106.008 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
JUMP_FORCE = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.3089 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air_down = SubResource( 4 )
anims/air_idle = SubResource( 5 )
anims/air_up = SubResource( 6 )
anims/double_jump = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/land = SubResource( 10 )
anims/run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )
vframes = 30
hframes = 10
frame = 128

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
